# kube-notify

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Readme.md  config.sample.yaml  deployment.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: github-actions-docker-tags.yml  github-actions-docker.yml  pytest-main.yml  pytest.yml  trivy.yml
kube_notify/: __init__.py  app.py  discord.py  gotify.py  logger.py  mattermost.py  notifications.py  selectors.py
kube_notify/notifications/: __init__.py  discord.py  gotify.py  mattermost.py
kube_notify/stream/: core_stream.py  crds_stream.py  pod_terminations.py
kube_notify/utils/: logger.py  misc.py
tests/: __init__.py  mock_func.py  test_core_stream.py
tests/data/: events.yaml  pods.yaml
tests/utils/: __init__.py  core_stream.py
