[tool.poetry]
name = "kube-notify"
version = "0"
description = "A simple python app to relay k8s events to gotify"
authors = ["wikle <loic97429@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
kube-notify = "kube_notify.app:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "^2.32.3"
argparse = "^1.4.0"
PyYAML = "^6.0.2"
kubernetes-asyncio = "^30.3.1"
DateTime = "^5.5"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
black = "^24.8.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
genbadge = {extras = ["tests","coverage"], version = "^1.1.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-pyinstaller-plugin.scripts]
kube-notify = { source = "kube_notify/app.py", type = "onefile", bundle = false }

[tool.coverage.report]
omit=["tests/*"]
show_missing = true
