[tool.poetry]
name = "kube-notify"
version = "0"
description = "A simple python app to relay k8s events to gotify"
authors = ["wikle <loic97429@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
kube-notify = "kube_notify.app:main"

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
requests = "^2.32.3"
argparse = "^1.4.0"
PyYAML = "^6.0.2"
kubernetes_asyncio = "^35.0.1"
DateTime = "^6.0"
pytz = "^2026.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^26.3.1"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.14.0"
pytest-cov = "^7.1.0"
genbadge = {extras = ["tests","coverage"], version = "^1.1.1"}
pyinstaller = "^6.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.requires-plugins]
poetry-pyinstaller-plugin = { version = ">=2.0.0,<3.0.0", extras = ["plugin"] }

[tool.poetry-pyinstaller-plugin]
type = "onefile"
bundle = false

[tool.poetry-pyinstaller-plugin.targets]
kube-notify = "kube_notify/app.py"

[tool.coverage.report]
omit=["tests/*"]
show_missing = true
